--- a/study/t_study/Ex/study/site1.html
+++ b/study/t_study/Ex/study/site1.html
@@ -31,7 +31,7 @@
             &lt;div class="header__logo">
                 &lt;a href="#">Pottery&lt;em>&lt;/em>&lt;/a>
             &lt;/div>
-            &lt;div class="header__menu">
+            &lt;div class="header__menu overlay">
                 &lt;ul>
                     &lt;li class="active">&lt;a href="#headerType">Header&lt;/a>&lt;/li>
                     &lt;li>&lt;a href="#sliderType">22AW Lookbook&lt;/a>&lt;/li>
@@ -42,6 +42,11 @@
             &lt;/div>
             &lt;div class="header__member">
                 &lt;a href="#">Login&lt;/a>
+            &lt;/div>
+            &lt;div class="header__ham">
+                &lt;span>&lt;/span>
+                &lt;span>&lt;/span>
+                &lt;span>&lt;/span>
             &lt;/div>
         &lt;/div>
     &lt;/section>
@@ -58,9 +63,8 @@
         position: fixed;
         left: 0;
         top: 0;
-        background-color: #fff;
-        backdrop-filter: blur(10px);
         z-index: 10000;
+        background: #fff;
     }
     .header__logo {
         width: 20%;
@@ -71,7 +75,6 @@
     .header__logo em {
         font-size: 18px;
         font-weight: 400;
-        font-style: normal;
     }
     .header__menu {
         width: 60%;
@@ -86,7 +89,7 @@
         transition: background-color 0.3s;
     }
     .header__menu li a:hover {
-        background-color: #f1f1f1;
+        background-color: #F1F1F1;
         border-radius: 5px;
     }
     .header__member {
@@ -98,10 +101,80 @@
         border: 1px solid #000;
         padding: 10px 30px;
         border-radius: 50px;
+        transition: all 0.3s;
     }
     .header__member a:hover {
         background-color: #000;
         color: #fff;
+    }
+    .header__ham {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        z-index: 1000;
+        width: 50px;
+        height: 50px;
+        display: none;
+        cursor: pointer;
+    }
+    .header__ham span {
+        display: block;
+        background: #ccc;
+        width: 30px;
+        height: 2px;
+        border-radius: 5px;
+        margin-left: 10px;
+        margin-top: 5px;
+        transition: 0.25s margin 0.25s, 0.25s transform;
+    }
+    .header__ham span:nth-child(1){
+        margin-top: 18px;
+    }
+    .header__ham.active span {
+        transition: 0.25s margin, 0.25s transform 0.25s;
+    }
+    .header__ham.active span:nth-child(1){
+        margin-top: 25px;
+        margin-bottom: -7px;
+        transform: rotate(45deg);
+    }
+    .header__ham.active span:nth-child(2){
+        transform: rotate(45deg);
+    }
+    .header__ham.active span:nth-child(3){
+        margin-top: -2px;
+        transform: rotate(135deg);
+    }
+    /* media */
+    @media (max-width: 1300px){
+        .header__menu {
+            position: fixed;
+            right: -100%;
+            top: 69px;
+            background: #fff;
+            width: 50%;
+            height: 100vh;
+            padding: 20px;
+            text-align: right;
+            transition: right 0.4s ease-in;
+        }
+        .header__menu li {
+            display: block;
+            margin: 20px;
+        }
+        .header__menu li a {
+            padding: 10px;
+            white-space: nowrap;
+        }
+        .header__menu.active {
+            right: 0;
+        }
+        .header__member {
+            margin-right: 50px;
+        }
+        .header__ham {
+            display: block;
+        }
     }
 </code></pre>
                 </div>
@@ -145,7 +218,7 @@
                     &lt;a href="#" class="stop">&lt;span class="ir">정지&lt;/span>&lt;/a>
                 &lt;/div>
             &lt;/div> -->
-
+        
             &lt;div class="swiper mySwiper">
                 &lt;div class="swiper-wrapper">
                     &lt;div class="swiper-slide">
@@ -187,16 +260,17 @@
                     &lt;/div>&lt;/div>
                 &lt;/div>
                 &lt;div class="swiper-pagination">&lt;/div>
+                &lt;div class="swiper-button">
+                    &lt;div class="swiper-button-play">&lt;span class="ir">play&lt;/span>&lt;/div>
+                    &lt;div class="swiper-button-stop">&lt;span class="ir">stop&lt;/span>&lt;/div>
+                &lt;/div>
                 &lt;div class="swiper-button-next">&lt;/div>
                 &lt;div class="swiper-button-prev">&lt;/div>
             &lt;/div>
         &lt;/div>
     &lt;/section>
 </code></pre>
-<pre><code class="language-js">    .slider__inner {
-        /* margin-top: 70px; */
-    }
-    .slider {
+<pre><code class="language-js">    .slider {
         position: relative;
     }
     .slider__img {
@@ -278,7 +352,7 @@
     }
     .slider__dot a.stop {
         background-position: -60px -70px;
-    }   
+    }
 
     /* swiper */
     .swiper-slide {
@@ -336,7 +410,7 @@
     }
     .swiper-button-next::after, .swiper-button-prev::after {
         opacity: 0;
-    }   
+    }
 
     .swiper-pagination-bullet {
         width: 16px !important;
@@ -348,7 +422,27 @@
     }
     .swiper-pagination-bullet-active {
         background-position: 0px -70px !important;
-    }   
+    }
+    .swiper-button {
+        position: absolute;
+        left: 50%;
+        margin-left: 40px;
+        bottom: 24px;
+        z-index: 1000;
+        display: flex;
+    }
+    .swiper-button-stop {
+        background-image: url(../img/slider_icon.svg);
+        background-position: -60px -70px;
+        width: 16px;
+        height: 16px;
+    }
+    .swiper-button-play {
+        background-image: url(../img/slider_icon.svg);
+        background-position: -40px -70px;
+        width: 16px;
+        height: 16px;
+    }
 
     @media (max-width: 960px) {
         .swiper-slide .desc {
