--- a/study/t_study/Ex/study/site1.html
+++ b/study/t_study/Ex/study/site1.html
@@ -12,11 +12,10 @@
 <body>
     <main id="main">
         <div class="document">
-
-            <h2 class="t_tit">완성 직전 사이트~</h2>
+            <h2 class="t_tit">사이트 완성본</h2>
             <p class="t_desc2">
-                이번에는 완성 거의~ 직전 사이트를 보여드리도록 할게요.
-                어느정도 css 작업과 반응형 작업을 해봤습니다.
+                이번에는 기존 사이트 작업을 통한 사이트 완성본를 보여드리도록 할게요.
+                어느정도 CSS 작업과 반응형 작업을 해봤습니다.
             </p>
 
             <h3 class="t_tit2">headerType</h3>
@@ -1171,6 +1170,9 @@
 </code></pre>
                 </div>
             </details>
+            <div class="t_link">
+                <a href="https://github.com/KDB6/ck/blob/main/site/site1/index.html" target="_blank">코드 원본 보기</a>
+            </div>
 
             <h3 class="t_tit2">완성 직전 사이트</h3>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
