--- a/study/t_study/Ex/study/sliderEffect02.html
+++ b/study/t_study/Ex/study/sliderEffect02.html
@@ -12,7 +12,7 @@
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">슬라이드 이펙트 02</h2>
+            <h2 class="t_tit">슬라이드 이펙트 02 (좌로 움직이기)</h2>
             <p class="t_desc2">
                 이번에는 이미지 슬라이드 형태를 가진 이펙트를 코딩해봤습니다.
             </p>
