--- a/javascript/effect/sliderEffect04.html
+++ b/javascript/effect/sliderEffect04.html
@@ -245,7 +245,7 @@
 
         // 왼쪽 버튼 클릭
         sliderBtnPrev.addEventListener("click", () => {
-            let prevIndex = (currentIndex - 1) % sliderCount
+            let prevIndex = (currentIndex + sliderCount - 1) % sliderCount
             beforeSlider(prevIndex);
             // 4 3 2 1 0
         });
