--- a/study/t_study/Ex/study/site1.html
+++ b/study/t_study/Ex/study/site1.html
@@ -1174,7 +1174,7 @@
                 <a href="https://github.com/KDB6/ck/blob/main/site/site1/index.html" target="_blank">코드 원본 보기</a>
             </div>
 
-            <h3 class="t_tit2">완성 직전 사이트</h3>
+            <h3 class="t_tit2">완성 사이트</h3>
             <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
                 <iframe src="https://kdb6.github.io/ck/site/site1/index.html" frameborder="0"></iframe>
             </div>
