--- a/site/site1/index.html
+++ b/site/site1/index.html
@@ -129,17 +129,19 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide"><div class="desc">
-                            <span>Brand</span>
-                            <h3>22AW Lookbook</h3>
-                            <p>
-                                포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다.
-                            </p>
-                            <div class="btn">
-                                <a href="#">Read more</a>
-                                <a href="#" class="black">Site</a>
+                        <div class="swiper-slide">
+                            <div class="desc">
+                                <span>Brand</span>
+                                <h3>22AW Lookbook</h3>
+                                <p>
+                                    포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다.
+                                </p>
+                                <div class="btn">
+                                    <a href="#">Read more</a>
+                                    <a href="#" class="black">Site</a>
+                                </div>
                             </div>
-                        </div></div>
+                        </div>
                     </div>
                     <div class="swiper-pagination"></div>
                     <div class="swiper-button">
