--- a/site/site2/index.html
+++ b/site/site2/index.html
@@ -109,5 +109,65 @@
                 </div>
         </div>
     </slider>
+
+    <script src="assets/js/swiper.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            autoplay: {
+                delay: 2000,
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+                clickable: true,
+            },
+        });
+
+        const btnStop = document.querySelector(".swiper-button-stop");
+        const btnStart = document.querySelector(".swiper-button-play");
+        const btnHam = document.querySelector(".header__ham");
+        const btnMenu = document.querySelector(".header__menu")
+
+        btnStart.style.display = "none";
+        
+        btnStop.addEventListener("click", () => {
+            swiper.autoplay.stop();
+            btnStart.style.display = "block";
+            btnStop.style.display = "none";
+        });
+        btnStart.addEventListener("click", () => {
+            swiper.autoplay.start();
+            btnStop.style.display = "block";
+            btnStart.style.display = "none";
+        });
+
+        btnHam.addEventListener("click", () => {
+            document.body.classList.toggle("fixed");
+            btnHam.classList.toggle("active");
+            btnMenu.classList.toggle("active");
+        });
+
+        window.addEventListener("resize", () => {
+            let width = window.innerWidth();
+            if(width > 1300) {
+                document.body.classList.remove("fixed");
+                btnMenu.classList.remove("active");;
+                btnHam.classList.remove("active");
+            }
+        });
+
+        document.querySelectorAll("#headerType ul li a").forEach(li => {
+            li.addEventListener("click", (e) => {
+                e.preventDefault();
+                document.querySelector(li.getAttribute("href")).scrollIntoView({
+                    behavior: "smooth"
+                });
+            })
+        })
+    </script>
 </body>
 </html>
