--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                   <span class="overlay-text-thumb1-donut">LAYOUT</span>
                   <span class="overlay-text-thumb2-donut">LAYOUT</span>
                 </div>
-                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>LAYOUT</h5>
                   <p>LAYOUT</p>
@@ -255,7 +255,7 @@
                   <span class="overlay-text-thumb1-donut">사이트 제작하기</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-carrot.svg" alt="portfolio">
+                <img src="assets/img/svg-cherries.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SITE</h5>
                   <p>사이트 제작하기</p>
@@ -276,7 +276,7 @@
                   <span class="overlay-text-thumb1-donut">검색 효과</span>
                   <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-cookie.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SEARCH</h5>
                   <p>검색 효과</p>
@@ -297,7 +297,7 @@
                   <span class="overlay-text-thumb1-donut">퀴즈 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-donut.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>QUIZ</h5>
                   <p>퀴즈 효과</p>
@@ -318,7 +318,7 @@
                   <span class="overlay-text-thumb1-donut">데이터 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-french-fries.svg " alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>DATA</h5>
                   <p>데이터 효과</p>
@@ -339,7 +339,7 @@
                   <span class="overlay-text-thumb1-donut">마우스 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-fried-chicken.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>MOUSE</h5>
                   <p>마우스 효과</p>
@@ -360,7 +360,7 @@
                   <span class="overlay-text-thumb1-donut">슬라이드 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-grapes.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SLIDER</h5>
                   <p>슬라이드 효과</p>
@@ -381,7 +381,7 @@
                   <span class="overlay-text-thumb1-donut">패럴랙스 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-hotdog.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>PARALLAX</h5>
                   <p>패럴랙스 효과</p>
@@ -402,7 +402,7 @@
                   <span class="overlay-text-thumb1-donut">게임 효과</span>
                   <span class="overlay-text-thumb2-donut">SITE</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-ice-cupcake.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>GAME</h5>
                   <p>게임 효과</p>
@@ -423,7 +423,7 @@
                   <span class="overlay-text-thumb1-donut">SVG</span>
                   <span class="overlay-text-thumb2-donut">SVG</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-lemon.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>SVG</h5>
                   <p>SVG</p>
@@ -444,7 +444,7 @@
                   <span class="overlay-text-thumb1-donut">CSS</span>
                   <span class="overlay-text-thumb2-donut">CSS</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>CSS</h5>
                   <p>CSS</p>
@@ -465,7 +465,7 @@
                   <span class="overlay-text-thumb1-donut">MySQL</span>
                   <span class="overlay-text-thumb2-donut">MySQL</span>
                 </div>
-                <img src="assets/img/svg-apple.svg" alt="portfolio">
+                <img src="assets/img/svg-pear.svg" alt="portfolio">
                 <div class="img-text donutImg">
                   <h5>MySQL</h5>
                   <p>MySQL</p>
