--- a/site/site2/index.html
+++ b/site/site2/index.html
@@ -20,12 +20,6 @@
     <!-- CSS(섹션별) -->
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/slider.css">
-    <!-- <link rel="stylesheet" href="assets/css/image.css">
-    <link rel="stylesheet" href="assets/css/imgText.css">
-    <link rel="stylesheet" href="assets/css/card.css">
-    <link rel="stylesheet" href="assets/css/banner.css">
-    <link rel="stylesheet" href="assets/css/text.css">
-    <link rel="stylesheet" href="assets/css/footer.css"> -->
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/swiper.css">
@@ -66,6 +60,37 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
+                            <div class="snow">
+                                <span class="snow1"></span>
+                                <span class="snow2"></span>
+                                <span class="snow3"></span>
+                                <span class="snow4"></span>
+                                <span class="snow5"></span>
+                                <span class="snow6"></span>
+                                <span class="snow7"></span>
+                            </div>
+                            <div class="desc">
+                                <h3>SNOW</h3>
+                                <p>
+                                    Snow Is Beautiful
+                                </p>
+                                <div class="btn">
+                                    <a href="#">MORE</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="desc">
+                                <h3>SNOW</h3>
+                                <p>
+                                    Snow Is Beautiful
+                                </p>
+                                <div class="btn">
+                                    <a href="#">MORE</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
                             <div class="desc">
                                 <h3>SNOW</h3>
                                 <p>
@@ -100,10 +125,6 @@
                         </div>
                     </div>
                     <div class="swiper-pagination"></div>
-                    <div class="swiper-button">
-                        <div class="swiper-button-play"><span class="ir">play</span></div>
-                        <div class="swiper-button-stop"><span class="ir">stop</span></div>
-                    </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
                 </div>
