--- a/javascript/javascript02.html
+++ b/javascript/javascript02.html
@@ -9,6 +9,34 @@
 
     <link rel="stylesheet" href="assets/css/dracula.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <style>
+        #parallax__top {
+            position: fixed;
+            left: 50%;
+            bottom: -220px;
+            z-index: 10000;
+            transform: translateY(-50%);
+            width: 40px;
+            height: 40px;
+            text-align: center;
+            line-height: 40px;
+            color: #666;
+            border-radius: 50%;
+            border: 1px solid #666;
+            padding: 0px;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+        #parallax__top.show {
+            bottom: 5px;
+        }
+        #parallax__top:hover {
+            background: #afbeff;
+            color: #fff;
+            border: 1px solid #fff;
+        }
+    </style>
 </head>
 
 <body>
@@ -71,6 +99,10 @@
                 <li><a href="#sample22">22. 객체 : 데이터 불러오기 : 비구조화 할당</a></li>
                 <li><a href="#sample23">23. 객체 : 데이터 불러오기 : 객체구조분해할당</a></li>
             </ul>
+            </div>
+
+            <div id="parallax__top">
+                Top
             </div>
 
             <div class="main_sample">
@@ -750,6 +782,22 @@
     <script>hljs.highlightAll();</script>
 
     <script>
+        window.addEventListener("scroll", () => {
+            let scrollTop = window.pageYOffset || window.scrollY || document.documentElement.scrollTop;
+
+            if(scrollTop + window.innerHeight >= document.body.scrollHeight) {
+                document.querySelector("#parallax__top").classList.add("show");
+            } else {
+                document.querySelector("#parallax__top").classList.remove("show");
+            }
+
+            document.querySelector("#parallax__info span").innerText = Math.ceil(scrollTop);
+        });
+
+        document.querySelector("#parallax__top").addEventListener("click", () => {
+            window.scrollTo({left: 0, top: 0, behavior: "smooth"})
+        });
+
         // //01. 변수 : 데이터 불러오기
         // {
         //     let x = 100,
