--- a/javascript/effect/dataEffect01.html
+++ b/javascript/effect/dataEffect01.html
@@ -120,7 +120,7 @@
       </div>
     </main>
 
-    <script src="../assets/css/js/prism.js"></script>
+    <script src="../assets/js/prism.js"></script>
 
     <script>
       // let sum = 0;
