--- a/javascript/effect/sliderEffect01.html
+++ b/javascript/effect/sliderEffect01.html
@@ -243,8 +243,8 @@
         </div>
     </footer>
 
-    <script src="../assets/css/js/highlight.min.js"></script>
-    <script src="../assets/css/js/common.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
+    <script src="../assets/js/common.js"></script>
     <script>
         hljs.highlightAll();
     </script>
