--- a/javascript/effect/mouseEffect.html
+++ b/javascript/effect/mouseEffect.html
@@ -65,7 +65,7 @@
     </footer>
     <!-- //footer -->
 
-    <script src="assets/css/js/highlight.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 
     <script>
