--- a/javascript/effect/mouseEffect02.html
+++ b/javascript/effect/mouseEffect02.html
@@ -201,9 +201,9 @@
         </div>
     </footer>
     <!-- //footer -->
-    <script src="../assets/css/js/highlight.min.js"></script>
-    <script src="../assets/css/js/common.js"></script>
-    <script src="../assets/css/js/gsap.min.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/gsap.min.js"></script>
     <script>
         hljs.highlightAll();
     </script>
