--- a/javascript/effect/mouseEffect04.html
+++ b/javascript/effect/mouseEffect04.html
@@ -19,14 +19,14 @@
             color: #fff;
             overflow: hidden;
             flex-direction: column;
-            /* cursor: none; */
         }
         .mouse__wrap figure {
             width: 50vw;
             height: 50vh;
-            background: #ccc;
             position: relative;
+            overflow: hidden;
             transition: transform 500ms ease;
+            cursor: none;
         }
         .mouse__wrap figure img {
             position: absolute;
@@ -61,6 +61,15 @@
             user-select: none;
             pointer-events: none;
         }
+        .mouse__info {
+            position: absolute;
+            left: 20px;
+            bottom: 10px;
+            font-size: 14px;
+            line-height: 1.6;
+            color: #fff;
+            list-style: none;
+        }
     </style>
 </head>
 <body class="jeju img05">
@@ -92,6 +101,15 @@
                 </figure>
             </div>
         </section>
+
+        <div class="mouse__info">
+            <ul>
+                <li>mousePageX : <span class="mousePageX">0</span>px</li>
+                <li>mousePageY : <span class="mousePageY">0</span>px</li>
+                <li>centerPageX : <span class="centerPageX">0</span>px</li>
+                <li>centerPageY : <span class="centerPageY">0</span>px</li>
+            </ul>
+        </div>
     </main>
     <!-- //main -->
 
@@ -184,15 +202,55 @@
         </div>
     </footer>
     <!-- //footer -->
-    <script src="../assets/css/js/highlight.min.js"></script>
-    <script src="../assets/css/js/common.js"></script>
-    <script src="../assets/css/js/gsap.min.js"></script>
+    <script src="../assets/js/highlight.min.js"></script>
+    <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/gsap.min.js"></script>
     <script>
         hljs.highlightAll();
     </script>
 
     <script>
+        const cursor = document.querySelector(".mouse__cursor");
+        const cursorRect = cursor.getBoundingClientRect();
 
+        document.querySelector(".mouse__wrap figure").addEventListener("mousemove", (e) => {
+            // 커서
+            gsap.to(cursor, {
+                duration: .5,
+                left: e.pageX - cursorRect.width/2,
+                top: e.pageY - cursorRect.height/2
+            });
+
+            // 마우스 좌표 값
+            let mousePageX = e.pageX;
+            let mousePageY = e.pageY;
+
+            // 전체 가로
+            // window.innerWidth;      // 1920 : 브라우저 크기
+            // window.outerWidth;      // 1920 : 브라우저 크기(스크롤 바 포함)
+            // window.screen.width;    // 1920 : 화면 크기
+
+            // 마우스 좌표 값 가운테로 초기화
+            // 전체 길이/2 - 마우스 좌표값 == 0
+            let centerPageX = window.innerWidth/2 - mousePageX;
+            let centerPageY = window.innerHeight/2 - mousePageY;
+
+            // 이미지 움직이기
+            const imgMove = document.querySelector(".mouse__wrap figure img");
+            // imgMove.style.transform = "translate("+ centerPageX/20 +"px, "+ centerPageY/20 +"px)";
+
+            gsap.to(imgMove, {
+                duration: 0.3,
+                x: centerPageX/20,
+                y: centerPageY/20
+            })
+
+            // 출력
+            document.querySelector(".mousePageX").textContent = mousePageX;
+            document.querySelector(".mousePageY").textContent = mousePageY;
+            document.querySelector(".centerPageX").textContent = centerPageX;
+            document.querySelector(".centerPageY").textContent = centerPageY;
+        });
     </script>
 </body>
 </html>
