--- a/javascript/javascript09.html
+++ b/javascript/javascript09.html
@@ -47,7 +47,9 @@
                 <li><a href="#">01. 브라우저 속성 : window.innerWidth : 브라우저의 가로 값(스크롤바 미포함)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.innerheight : 브라우저의 높이 값(스크롤바 미포함)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.outerWidth : 브라우저의 가로 값(스크롤바 포함)</a></li>
-                <li><a href="#">01. 브라우저 속성 : window.outerHeight : 브라우저의 가로 값(스크롤바 포함)</a></li>
+                <li><a href="#">01. 브라우저 속성 : window.outerHeight : 브라우저의 세로 값(스크롤바 포함)</a></li>
+                <li><a href="#">01. 브라우저 속성 : window.screen.width : 모니터 가로 값</a></li>
+                <li><a href="#">01. 브라우저 속성 : window.screen.height : 모니터 세로 값</a></li>
                 
                 <li><a href="#">01. 브라우저 속성 : window.pageXOffset : 가로 스크롤 값(브라우저 기준)</a></li>
                 <li><a href="#">01. 브라우저 속성 : window.pageYOffset : 세로 스크롤 값(브라우저 기준)</a></li>
