--- a/javascript/javascript08.html
+++ b/javascript/javascript08.html
@@ -48,7 +48,7 @@
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
-    <script src="assets/css/js/highlight.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
 </html>
