--- a/javascript/javascript04.html
+++ b/javascript/javascript04.html
@@ -443,7 +443,7 @@
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
     <!-- //footer -->
-    <script src="assets/css/js/highlight.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 
     <script>
