--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -954,7 +954,7 @@
         }
     </script>
 
-    <script src="assets/css/js/highlight.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
 </html>
