--- a/javascript/javascript11.html
+++ b/javascript/javascript11.html
@@ -95,7 +95,7 @@
     </footer>
     <!-- //footer -->
 
-    <script src="assets/css/js/highlight.min.js"></script>
+    <script src="assets/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
 </html>
